--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ streamlit
 pypdf
 langchain
 langchain-community
+langchain-text-splitters
 langchain-groq
 groq
 faiss-cpu
 sentence-transformers
+python-dotenv
