--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-streamlit
-pypdf
-langchain
-langchain-community
-langchain-text-splitters
-langchain-groq
-groq
-faiss-cpu
-sentence-transformers
-python-dotenv
+streamlit>=1.30.0
+
+pypdf>=4.0.0
+python-dotenv>=1.0.0
+
+langchain>=0.1.16
+langchain-community>=0.0.30
+langchain-text-splitters>=0.0.1
+langchain-groq>=0.1.4
+
+groq>=0.9.0
+
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
